--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,17 @@
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            android:src="@android:drawable/ic_menu_search" />
+    </FrameLayout>
+
 
     <!-- The navigation drawer -->
     <ListView android:id="@+id/left_drawer"
@@ -19,9 +29,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="#7b7b7b"/>
+        android:divider="@color/colorPrimary"
+        android:dividerHeight="5dp"
+        android:background="#ffffff"/>
 
 
 </android.support.v4.widget.DrawerLayout>
